Navbar link block / fix navbar menu not centered

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -13,7 +13,6 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
 
     .logo {
       position: absolute;
@@ -40,12 +39,29 @@
 
     $margin-size: 45px;
 
+    div[class^="nav-"] {
+
+      .nav-linker {
+        display: inline-block;
+        color: white;
+
+        &:hover {
+          cursor: pointer;
+          text-decoration: underline;
+        }
+      }
+    }
+
     .nav-left {
-      margin-right: $margin-size;
+      position: absolute;
+      left: calc(50% - #{$margin-size});
+      transform: translateX(-100%);
     }
 
     .nav-right {
-      margin-left: $margin-size;
+      position: absolute;
+      right: calc(50% - #{$margin-size});
+      transform: translateX(100%);
     }
   }
 }
